# Final-Assignment

./: .gitignore  CLAUDE.md  README.md  prototype.html  pyproject.toml  report.md
.github/workflows/: deploy.yml
design1/: build_figure.py  index.html  load_data.py  pyproject.toml
design1/tests/: conftest.py  test_build_figure.py  test_lat_bands.py  test_load_data.py
docs/: 2026-05-27-co2-latitude-temperature-3d-viz-design.md  2026-05-27-co2-latitude-temperature-3d-viz-plan.md  2026-05-28-d3js-migration-design.md  2026-05-28-d3js-migration-plan.md  2026-05-29-3d-to-2d-projection-design.md  2026-05-29-3d-to-2d-projection-plan.md  2026-05-29-plotly-vue-refactor-design.md
src/analyse/: analysis.html
src/builder/: build.py  build_figure.py  lat_bands.py
src/observable/: index.html  package-lock.json  package.json  vite.config.ts
src/observable/public/data/: co2.json  combined.json  temperature.json
src/observable/src/: App.vue  types.ts
src/observable/src/components/: CO2Chart.vue  ClimateChart.vue  ControlBar.vue  Controls.vue  Heatmap.vue  Legend.vue  Scatter3D.vue  TimeSlider.vue
src/observable/src/composables/: useHeatmap.ts  useScatter3D.ts  useTimeSeries.ts
src/observable/src/data/: climate-data.ts  loader.ts  processor.ts  types.ts
src/preprocess/: build.py  load_data.py  pyproject.toml
