[project]
name = "finel-assignment-design1"
version = "0.1.0"
description = "Interactive 3D visualization of CO2, latitude, and temperature (design1)"
requires-python = ">=3.12"
dependencies = [
    "plotly>=5.18",
    "pandas>=2.2",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
